PHP snippets organization + ucfirst function

--- a/snippets/php-mode/namespace
+++ b/snippets/php-mode/namespace
@@ -1,8 +1,7 @@
 # -*- mode: snippet -*-
-#contributor : Jacek Wysocki <jacek.wysocki@gmail.com>
-#name : symfony2 based class template
-#key : namespace
-#group : definitions
+# contributor : Jacek Wysocki <jacek.wysocki@gmail.com>
+# name : symfony2 based class template
+# key : ns
 # --
 `(progn (save-buffer) (php-symfony2-generate-namespace))`
 $0
